@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/freetype-2.3.5-r2.ebuild,v 1.8 2008/01/10 08:44:41 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/freetype-2.3.6.ebuild,v 1.1 2008/06/11 01:00:00 dirtyepic Exp $
 
 EAPI="prefix"
 
@@ -62,7 +62,6 @@ src_unpack() {
 	disable_option FT_CONFIG_OPTION_OLD_INTERNALS
 
 	epatch "${FILESDIR}"/${PN}-2.3.2-enable-valid.patch
-	epatch "${FILESDIR}"/${PN}-2.3.5-crossbuild.patch		# bug #185681
 
 	if use utils; then
 		cd "${WORKDIR}"/ft2demos-${PV}
